# quad_mujoco_sim

./: CMakeLists.txt
msgs/: imu_state.lcm  joint_control.lcm  joint_state.lcm
scripts/: launch_lcm_spy.sh  make_lcm_types.sh
